[gd_scene load_steps=11 format=3 uid="uid://wlic4fvv32tb"]

[ext_resource type="Script" uid="uid://d2lqbha40iqxk" path="res://plotter/plot_display.gd" id="1_fivpf"]
[ext_resource type="Script" uid="uid://cqa5cwuethg6w" path="res://addons/graph_2d/graph_2d.gd" id="2_tq3og"]
[ext_resource type="Script" uid="uid://dfl64ckgseo6t" path="res://plotter/file_writer.gd" id="3_r7mbb"]
[ext_resource type="Script" uid="uid://mparkyalnsmk" path="res://plotter/recording_controller.gd" id="3_tq3og"]
[ext_resource type="StyleBox" uid="uid://dd5bi58112qcy" path="res://plotter/button_pressed.tres" id="4_bm8qj"]
[ext_resource type="Script" uid="uid://b6ayvoj01dwhl" path="res://plotter/start_recording_button.gd" id="4_hg8r6"]
[ext_resource type="StyleBox" uid="uid://ji104dm0xaou" path="res://plotter/button_normal.tres" id="4_lhfwa"]
[ext_resource type="Script" uid="uid://bojisw7t8bts4" path="res://plotter/stop_recording_button.gd" id="5_q0lfw"]
[ext_resource type="StyleBox" uid="uid://clgmygg8pn6ht" path="res://plotter/button_hovered.tres" id="6_h8m52"]
[ext_resource type="Script" uid="uid://cc00o0aqnfhbk" path="res://plotter/recording_label.gd" id="6_lrww4"]

[node name="PlotDisplay" type="Node2D"]
script = ExtResource("1_fivpf")

[node name="RecordingController" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("3_tq3og")

[node name="FileWriter" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("3_r7mbb")

[node name="PlotLayer" type="CanvasLayer" parent="."]
unique_name_in_owner = true

[node name="VBoxContainer" type="VBoxContainer" parent="PlotLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="PlotLayer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 100
theme_override_constants/margin_top = 100
theme_override_constants/margin_right = 100
theme_override_constants/margin_bottom = 20

[node name="GraphGyro" type="Control" parent="PlotLayer/VBoxContainer/MarginContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 200)
layout_mode = 2
script = ExtResource("2_tq3og")
x_max = 100.0
y_min = -20.0
y_max = 20.0
metadata/_custom_type_script = "uid://cqa5cwuethg6w"

[node name="MarginContainer2" type="MarginContainer" parent="PlotLayer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 100
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 100
theme_override_constants/margin_bottom = 100

[node name="GraphAcc" type="Control" parent="PlotLayer/VBoxContainer/MarginContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 200)
layout_mode = 2
script = ExtResource("2_tq3og")
x_max = 100.0
y_min = -20.0
y_max = 20.0
metadata/_custom_type_script = "uid://cqa5cwuethg6w"

[node name="ButtonLayer" type="CanvasLayer" parent="."]
unique_name_in_owner = true

[node name="MarginContainer" type="MarginContainer" parent="ButtonLayer"]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -8.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/margin_bottom = 40

[node name="HBoxContainer" type="HBoxContainer" parent="ButtonLayer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 100
alignment = 1

[node name="StartRecordingButton" type="Button" parent="ButtonLayer/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_styles/normal = ExtResource("4_lhfwa")
theme_override_styles/pressed = ExtResource("4_bm8qj")
theme_override_styles/hover = ExtResource("6_h8m52")
theme_override_styles/disabled = ExtResource("4_lhfwa")
theme_override_styles/focus = ExtResource("4_bm8qj")
text = "Start Recording"
script = ExtResource("4_hg8r6")

[node name="StopRecordingButton" type="Button" parent="ButtonLayer/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_styles/normal = ExtResource("4_lhfwa")
theme_override_styles/pressed = ExtResource("4_bm8qj")
theme_override_styles/hover = ExtResource("6_h8m52")
theme_override_styles/disabled = ExtResource("4_lhfwa")
theme_override_styles/focus = ExtResource("4_lhfwa")
text = "Stop Recording"
script = ExtResource("5_q0lfw")

[node name="RecordingLabel" type="Label" parent="ButtonLayer/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
text = "Recording..."
script = ExtResource("6_lrww4")

[node name="Timer" type="Timer" parent="ButtonLayer/MarginContainer/HBoxContainer/RecordingLabel"]
wait_time = 0.2

[connection signal="button_down" from="ButtonLayer/MarginContainer/HBoxContainer/StartRecordingButton" to="RecordingController" method="_on_start_recording_button_down"]
[connection signal="button_down" from="ButtonLayer/MarginContainer/HBoxContainer/StopRecordingButton" to="RecordingController" method="_on_stop_recording_button_down"]
[connection signal="timeout" from="ButtonLayer/MarginContainer/HBoxContainer/RecordingLabel/Timer" to="ButtonLayer/MarginContainer/HBoxContainer/RecordingLabel" method="_on_timer_timeout"]
